tests/snapshots/render__direct_issues.snap
---
source: tests/render.rs
expression: terminal.backend()
---
"┌ octo-org/repo-charlie ────────────────────────────────────────────┐┌ Issue #2610 ────────────────────────────────────┐"
"│  #    Title                                                       ││Fix panic when list is empty                     │"
"│▶ #2610 Fix panic when list is empty               @user-30     1d││ Type: Enhancement                             │"
"│   Type: Enhancement                                             ││Loading…                                         │"
"│  #2556 Add keyboard navigation to sidebar         @user-31     3d││                                                 │"
"│   Type: Bug                                                     ││                                                 │"
"│  #2547 chore(deps): bump serde from 1.0.1 to 1.0…@user-10     2w ││                                                 │"
"│  #2526 feat: add dark mode support                @user-32    6mo││                                                 │"
"│  #2521 refactor: simplify auth flow               @user-33     2y││                                                 │"
"│   Type: Enhancement                                             ││                                                 │"
"│  #2502 docs: update README with installation ste…@user-06    45m ││                                                 │"
"│  #2500 fix: resolve memory leak in cache          @user-16     3h││                                                 │"
"│   Type: Enhancement                                             ││                                                 │"
"│  #2458 test: add integration tests for API        @user-34     1d││                                                 │"
"│   Type: Enhancement                                             ││                                                 │"
"│  #2448 style: format code with rustfmt            @user-35     3d││                                                 │"
"│   Type: Enhancement                                             ││                                                 │"
"│  #2421 perf: optimize database queries            @user-36     2w││                                                 │"
"│   Type: Bug   Effort: Good First Issue                        ││                                                 │"
"│  #2419 chore: remove unused dependencies          @user-19    6mo││                                                 │"
"│   Type: Enhancement                                             ││                                                 │"
"│                                                                   ││                                                 │"
"│                                                                   ││                                                 │"
"│                                                                   ││                                                 │"
"│                                                                   ││                                                 │"
"│                                                                   ││                                                 │"
"│                                                                   ││                                                 │"
"│                                                                   ││                                                 │"
"│                                                                   ││                                                 │"
"│                                                                   ││                                                 │"
"│                                                                   ││                                                 │"
"│                                                                   ││                                                 │"
"│                                                                   ││                                                 │"
"│                                                                   ││                                                 │"
"│                                                                   ││                                                 │"
"│                                                                   ││                                                 │"
"│                                                                   ││                                                 │"
"│                                                                   ││                                                 │"
"└ f·page  p·prs  i·issues (11) ─────────────────────────────────────┘└─────────────────────────────────────────────────┘"
" o open  y copy URL  / filter  S sort  ? help                                                                           "
