tests/snapshots/render__empty_app.snap
---
source: tests/render.rs
expression: terminal.backend()
---
"┌ Sources ─────────────────────────┐┌  ────────────────────────────────┐┌ Pull Requests  newest ───────────────────────┐"
"│Run: gh auth login                ││                                  ││                    ±                    │"
"│                                  ││                                  ││Select a repo                                 │"
"│                                  ││                                  ││                                              │"
"│                                  ││                                  ││                                              │"
"│                                  ││                                  ││                                              │"
"│                                  ││                                  ││                                              │"
"│                                  ││                                  ││                                              │"
"│                                  ││                                  ││                                              │"
"│                                  ││                                  ││                                              │"
"│                                  ││                                  ││                                              │"
"│                                  ││                                  ││                                              │"
"│                                  ││                                  ││                                              │"
"│                                  ││                                  ││                                              │"
"│                                  ││                                  ││                                              │"
"│                                  ││                                  ││                                              │"
"│                                  ││                                  ││                                              │"
"│                                  ││                                  ││                                              │"
"│                                  ││                                  ││                                              │"
"│                                  ││                                  ││                                              │"
"│                                  ││                                  ││                                              │"
"│                                  ││                                  ││                                              │"
"│                                  ││                                  ││                                              │"
"│                                  ││                                  ││                                              │"
"│                                  ││                                  ││                                              │"
"│                                  ││                                  ││                                              │"
"│                                  ││                                  ││                                              │"
"│                                  ││                                  ││                                              │"
"│                                  ││                                  ││                                              │"
"│                                  ││                                  ││                                              │"
"│                                  ││                                  ││                                              │"
"│                                  ││                                  ││                                              │"
"│                                  ││                                  ││                                              │"
"│                                  ││                                  ││                                              │"
"│                                  ││                                  ││                                              │"
"│                                  ││                                  ││                                              │"
"│                                  ││                                  ││                                              │"
"│                                  ││                                  ││                                              │"
"└──────────────────────────────────┘└ r·repos  p·prs  i·issues ────────┘└ f·page  p·prs  i·issues ─────────────────────┘"
" o open  y copy URL  C clone  / filter  ? help                                                                          "
