tests/snapshots/render__help_overlay_shown.snap
---
source: tests/render.rs
expression: terminal.backend()
---
"┌──┐┌──┐┌ octo-org/repo-charlie  newest ───────────────────────────────▲┌ repo-charlie #2628 ──────────────────────────┐"
"│ ││ ││           ┌ Help ────────────────────────────────────────────────────────────────────────▲y                  │"
"│o ││r ││▶ #2628 by │        Navigation                                                           █-on-missing-config…│"
"│c ││e ││      Fix │j/↓   move down                                                               █Commits   Checks  │"
"│t ││p ││  #2625 by │k/↑   move up                                                                 █──────────────────┐│"
"│o ││o ││      Add │h/←   focus left                                                              █                  ││"
"│- ││- ││  #2621 by │l/→   focus right                                                             █                  ││"
"│o ││c ││      chor│g     jump to top                                                             █                  ││"
"│r ││h ││  #2609 by │G     jump to bottom                                                          █                  ││"
"│g ││a ││      feat│R     refresh                                                                 █                  ││"
"│  ││r ││  #2607 by │?     help                                                                    █                  ││"
"│  ││l ││      refa│q     quit                                                                    █                  ││"
"│  ││i ││  #2606 by │                                                                              █                  ││"
"│  ││e ││      docs│        Sources                                                              █                  ││"
"│  ││  ││  #2579 by │o     open                                                                    █                  ││"
"│  ││  ││      fix:│y     copy URL                                                                █                  ││"
"│  ││  ││  #2569 by │C     clone                                                                   █                  ││"
"│  ││  ││      test│/     filter                                                                  ║                  ││"
"│  ││  ││  #2563 by │                                                                              ║                  ││"
"│  ││  ││      styl│        Browse                                                               ║                  ││"
"│  ││  ││  #2548 by │r     repos                                                                   ║                  ││"
"│  ││  ││      perf│p     prs                                                                     ║                  ││"
"│  ││  ││  #2527 by │i     issues                                                                  ║                  ││"
"│  ││  ││      chor│o     open                                                                    ║                  ││"
"│  ││  ││  #2525 by │y     copy URL                                                                ║                  ││"
"│  ││  ││      feat│C     clone                                                                   ║                  ││"
"│  ││  ││  #2517 by │/     filter                                                                  ║                  ││"
"│  ││  ││      bugf│S     sort                                                                    ║                  ││"
"│  ││  ││  #2511 by │                                                                              ║                  ││"
"│  ││  ││      refa│        Issues                                                               ║                  ││"
"│  ││  ││  #2490 by │o     open                                                                    ║                  ││"
"│  ││  ││      docs│y     copy URL                                                                ║                  ││"
"│  ││  ││  #2452 by │/     filter                                                                  ║                  ││"
"│  ││  ││      test│S     sort                                                                    ║                  ││"
"│  ││  ││  #2447 by │                                                                              ║                  ││"
"│  ││  ││      feat│        PRs                                                                  ║                  ││"
"│  ││  ││  #2436 by │space select                                                                  ║                  ││"
"│  ││  ││      fix:│j/k scroll  (34/56)                                                           ║──────────────────┘│"
"└──┘└──┘└ f·page  p·└──────────────────────────────────────────────────────────────────────────────▼───────────────────┘"
" space select  ^a select all  v approve  m merge  u rebase  C checkout  c comment  d diff  o open  y copy URL  ? help   "
