tests/snapshots/render__help_overlay_shown_direct_repo.snap
---
source: tests/render.rs
expression: terminal.backend()
---
"┌ octo-org/repo-charlie  newest ────────────────────────────────────▲┌ repo-charlie #2628 ─────────────────────────────┐"
"│                   ┌ Help ────────────────────────────────────────────────────────────────────────▲                   │"
"│▶ #2628 by @user-01│        Navigation                                                           █-missing-config → …│"
"│      Fix panic wh│j/↓   move down                                                               █mits   Checks   F│"
"│  #2625 by @user-02│k/↑   move up                                                                 █──────────────────┐│"
"│      Add keyboard│h/←   focus left                                                              █                  ││"
"│  #2621 by @user-03│l/→   focus right                                                             █                  ││"
"│      chore(deps):│g     jump to top                                                             █                  ││"
"│  #2609 by @user-04│G     jump to bottom                                                          █                  ││"
"│      feat: add da│R     refresh                                                                 █                  ││"
"│  #2607 by @user-05│?     help                                                                    █                  ││"
"│      refactor: si│q     quit                                                                    █                  ││"
"│  #2606 by @user-06│                                                                              █                  ││"
"│      docs: update│        Issues                                                               █                  ││"
"│  #2579 by @user-07│o     open                                                                    █                  ││"
"│      fix: resolve│y     copy URL                                                                █                  ││"
"│  #2569 by @user-08│/     filter                                                                  █                  ││"
"│      test: add in│S     sort                                                                    █                  ││"
"│  #2563 by @user-09│                                                                              █                  ││"
"│      style: forma│        PRs                                                                  █                  ││"
"│  #2548 by @user-10│space select                                                                  ║                  ││"
"│      perf: optimi│^a    select all                                                              ║                  ││"
"│  #2527 by @user-11│v     approve                                                                 ║                  ││"
"│      chore: remov│m     auto-merge                                                              ║                  ││"
"│  #2525 by @user-12│u     rebase                                                                  ║                  ││"
"│      feat: implem│C     checkout                                                                ║                  ││"
"│  #2517 by @user-13│c     comment                                                                 ║                  ││"
"│      bugfix: hand│d     diff                                                                    ║                  ││"
"│  #2511 by @user-14│o     open                                                                    ║                  ││"
"│      refactor: ex│y     copy URL                                                                ║                  ││"
"│  #2490 by @dependa│/     filter                                                                  ║                  ││"
"│      docs: add co│S     sort                                                                    ║                  ││"
"│  #2452 by @user-15│esc   clear selection                                                         ║                  ││"
"│      test: fix fl│x     close                                                                   ║                  ││"
"│  #2447 by @user-16│X     reopen                                                                  ║                  ││"
"│      feat: add lo│W     mark ready                                                              ║                  ││"
"│  #2436 by @user-17│b     dependabot                                                              ║                  ││"
"│      fix: correct│j/k scroll  (34/40)                                                           ║──────────────────┘│"
"└ f·page  p·prs (30)└──────────────────────────────────────────────────────────────────────────────▼───────────────────┘"
" space select  ^a select all  v approve  m merge  u rebase  C checkout  c comment  d diff  o open  y copy URL  ? help   "
