tests/snapshots/render__narrow_60x20.snap
---
source: tests/render.rs
assertion_line: 13
expression: terminal.backend()
---
"┌──┐┌──┐┌ octo-org/repo-charlie  newe▲┌ repo-charlie #2628 ┐"
"│ ││ ││           ±             █│Fix panic when list │"
"│o ││r ││▶ #2628     0  · ·          █│is empty            │"
"│c ││e ││      Fix panic when list …█│@user-01  fix/handl…│"
"│t ││p ││  #2625     0  · ·          █│  Overview   Activ│"
"│o ││o ││      Add keyboard navigat…║│┌  Overview ──────┐│"
"│- ││- ││  #2621     0  · ·          ║││Summary           ││"
"│o ││c ││      chore(deps): bump se…║││                  ││"
"│r ││h ││  #2609     0  · ·          ║││Loading…          ││"
"│g ││a ││      feat: add dark mode …║││                  ││"
"│  ││r ││  #2607     0  · ·          ║││Changes           ││"
"│  ││l ││      refactor: simplify a…║││                  ││"
"│  ││i ││  #2606     0  · ·          ║││Loading…          ││"
"│  ││e ││      docs: update README …║││                  ││"
"│  ││  ││  #2579     0  · ·          ║││Checks            ││"
"│  ││  ││      fix: resolve memory …║││                  ││"
"│  ││  ││  #2569     0  · ·          ║││Loading…          ││"
"│  ││  ││      test: add integratio…║│└──────────────────┘│"
"└──┘└──┘└ f·page  p·prs (30)  i·issue▼└────────────────────┘"
" v approve  m merge  C checkout  c comment  d diff  ? help  "
