tests/snapshots/render__preview_issue_list.snap
---
source: tests/render.rs
expression: terminal.backend()
---
"┌ Sources ─────────────────────────┐┌  @owner  ────────────────────────┐┌ Issue #1 ────────────────────────────────────┐"
"│▶  @owner                        ││  #    Title                      ││test issue                                    │"
"│                                  ││▶  #1 test issue   @alice      2y││Loading…                                      │"
"│                                  ││                                  ││                                              │"
"│                                  ││                                  ││                                              │"
"│                                  ││                                  ││                                              │"
"│                                  ││                                  ││                                              │"
"│                                  ││                                  ││                                              │"
"│                                  ││                                  ││                                              │"
"│                                  ││                                  ││                                              │"
"│                                  ││                                  ││                                              │"
"│                                  ││                                  ││                                              │"
"│                                  ││                                  ││                                              │"
"│                                  ││                                  ││                                              │"
"│                                  ││                                  ││                                              │"
"│                                  ││                                  ││                                              │"
"│                                  ││                                  ││                                              │"
"│                                  ││                                  ││                                              │"
"│                                  ││                                  ││                                              │"
"│                                  ││                                  ││                                              │"
"│                                  ││                                  ││                                              │"
"│                                  ││                                  ││                                              │"
"│                                  ││                                  ││                                              │"
"│                                  ││                                  ││                                              │"
"│                                  ││                                  ││                                              │"
"│                                  ││                                  ││                                              │"
"│                                  ││                                  ││                                              │"
"│                                  ││                                  ││                                              │"
"│                                  ││                                  ││                                              │"
"│                                  ││                                  ││                                              │"
"│                                  ││                                  ││                                              │"
"│                                  ││                                  ││                                              │"
"│                                  ││                                  ││                                              │"
"│                                  ││                                  ││                                              │"
"│                                  ││                                  ││                                              │"
"│                                  ││                                  ││                                              │"
"│                                  ││                                  ││                                              │"
"│                                  ││                                  ││                                              │"
"└──────────────────────────────────┘└ r·repos  p·prs  i·issues (1) ────┘└──────────────────────────────────────────────┘"
" o open  y copy URL  / filter  ? help                                                                                   "
